--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,11 @@ body {
     font-size: 14px;
 }
 h2 {
-  margin: 0;
-  padding: 6vh 8vw 0 13vw;
   color: white;
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
-  font-size: 2.05rem;
-  z-index: 1;
+  font-size: 1.5em;
+  line-height: 0.4;
 }
 .highlight {
   color: #268EA6;
@@ -26,12 +24,12 @@ h2 {
 h3 {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 1.4rem;
+  font-size: 1.4em;
   color: white;
 }
 p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.2rem;
+    font-size: 0.9em;
     font-weight: 400;
     color: white;
 }
@@ -45,7 +43,7 @@ ul {
   color: #268EA6;
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 0.8em;
 }
 li {
   padding: 0 15px;
@@ -60,7 +58,7 @@ li {
   align-items: center;
   height: 55px;
   width: 100vw;
-  background-color: rgba(218, 207, 200, 0.7);
+  background-color: rgba(223, 212, 205, 0.7);
   box-shadow: 0 0 15px #888888;
 }
 .navbar-container {
@@ -72,12 +70,13 @@ li {
 }
 .navbar-logo {
   width: 45px;
+  padding: 0 15px;
 }
 .header {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: url(./images/Header4.jpg) no-repeat center;
+  background: url(./images/Header5.jpg) no-repeat center;
   width: 100%;
   position: relative;
   left: 0;
@@ -105,21 +104,31 @@ li {
 }
 .header-grid {
   display: flex;
+  max-width: 876px;
   padding-top: 20vh;
   z-index: 2;
 }
 .left-column {
   width: 50vw;
 }
+.logo-div {
+  width: 30vw;
+  max-width: 250px;
+  margin-left: 8vw;
+}
+.left-column-text {
+  margin: 0;
+  padding: 6vh 0 0 10vw;
+  z-index: 1;
+}
 .image-div {
-  width: 45vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 45vw; */
   height: 87vh;
   padding: 5.1vh 2.3vw 0 2vw;
   z-index: 1;
-}
-.logo-div {
-  width: 30vw;
-  margin-left: 10.8vw;
 }
 .first-section-container {
   display: flex;
